Modificações - Introduzindo os atributos em HTML, src.

--- a/index.html
+++ b/index.html
@@ -43,10 +43,26 @@
   Geralmente essa tag é utilizada para agrupar contextos espeficios, dando ensafe de que esse é a seção principal do site.
 -->
 
-<img />
+<img >
 
 <!--Tag HTML - img: este elemento html dar a possibilidade de adicionar imagens na aplicação. Tendo uma sintaxe bastante parecida com as demais tags, a diferença é que não possui uma tag de fechamento. Devido o seu destaque familiar de que o significado dessa tag é a exibição da imagem, tendo o uso de um atributo espeficico que é utilizado nessa tag.
   - A sintaxe da tag img é um fechamento automatico, não necessitando da tag de fechamento.
   - Importante destacar que se utiliza o atributo src (mais pra frente será itroduzido) que o valor passado é o diretorio da imagem, URL, dentre outros parametros que podem ser passados para a exibição da imagem.
 -->
 
+<br>
+<!--Tag HTML - br: serve para inserir uma quebra de linha em textos ou em elementos HTML
+-->
+
+<h1> Atributos | HTML5 </h1>
+<p>
+  Atributos são palavras chaves que podem ser inseridas em determinados elementos HTMl que definem o comportamento correspodente, dependo do atributo envolvido. <br>
+  Na tag img, é possível perceber que para se inserir uma imagem, é necessário utilizar o atributo src.
+</p>
+<!--O atributo src serve para designar uma URL ou diretorio, de forma que possa ser passado como valor a localização da imagem que vai ser exibida.
+
+  A sintaxe, basta inserir o nome do atributo acompanhado com o = e "" que é o valor que será inserido para determinar a localização da imagem.
+-->
+<h2>src</h2>
+<p>Por exemplo, </p>
+<img src="">
