Nas etapas finais, construção do guia HTML5.

--- a/index.html
+++ b/index.html
@@ -1,68 +1,1 @@
-<!--Introduzindo o HTML - Hypertext Markup Language
-É uma linguagem de marcação texto, utilizada para criar uma estrutura básica para web dando proposito aos elementos que são exibidos e distribuidos na aplicação.
--->
-
-<!--Sintaxe - Forma escrita de se escrever, assim como o idioma português tem uma forma de ser escrita, no HTML não é diferente.
-
-  - Os elementos HTML são introduzidos por tags que dão proposito para a estrutura de um site.
-  - A maneira de escrever os elementos HTML funciona da seguinte forma:
-      - Possui a tag de abertura, representado por < com o nome da tag envolvida e com >
-      - Após isso possui o conteúdo que será inserido na tag envolvida depois do >
-      - E por fim, o fechamento da tag, acompanhado com </ com o nome da tag e com >
-    É dessa maneira que funciona a sintaxe do HTML. É importante resaltar que haverá casos em que as tags podem não possuir fechamento, deve-se pensar sobre o alinhamento de elementos com sua indentação e alguns caracteres como <, >, ' dentro do conteúdo das tags, pode ser usadas porém a compilação do HTML para ser exibida no navegador pode ocorrer erros e existe uma sintaxe especifíca para inserir esses elementos dentro do conteúdo de uma tag.
-  Todos esses pontos devem ser considerados, a medida que for praticando os conceitos e os fundamentos do HTML.
-
-  Além disso, cada elemento html por padrão, existem propriedades que são cedidas pelo proprio navegador.
-
--->
-
-<h1>Aqui é um título</h1>
-<!--Tag HTML - h1: um elemento HTML que corresponde o coonteúdo exibido como um título da aplicação. 
-  Existindo as suas devidas variações: h1, h2, h3, h4, h5 e h6
-  Cada elemento com a inúmeração menor representa maior importância. Se a inumeráção for maior, na aplicação representa menos destaque.
-  Geralmente essas tags são utiloizadas para definir títulos na aplicação e subtitulos com suas derivações de um contexto principal que é agrupada com seus contexto especifico.
-
--->
-
-<p>Aqui é um parágrafo</p>
-<!-- Tag HTML - p: seguindo o mesmo exemplo da tag anteriomente exemplificada, essa é uma tag de representação de parágrafo, ou seja, são textos pequenos que apresentam diversos caracteres que podem ser introduzidos como textos, inumerações, etc. Dando significado a ser um parágrafo na aplicação web.
-
--->
-
-<main>
-  <h1>Isto é um título</h1>
-  <p>Isto é um parágrafo</p>
-
-  <h2>Subtítulo</h2>
-  <p>Isto é um parágrafo</p>
-</main>
-
-<!--Tag HTML - main: Existem elementos no HTML que dão identificação aos conteúdos do HTML, podendo facilitar a leitura dos códigos HTML, na acessibilidade e nos navegadores de busca. 
-
-  Nesse exemplo, destaco a tag main, um elemento HTML que agrupa outros elementos para uma seção principal da aplicação que está sendo exibida.
-  Geralmente essa tag é utilizada para agrupar contextos espeficios, dando ensafe de que esse é a seção principal do site.
--->
-
-<img >
-
-<!--Tag HTML - img: este elemento html dar a possibilidade de adicionar imagens na aplicação. Tendo uma sintaxe bastante parecida com as demais tags, a diferença é que não possui uma tag de fechamento. Devido o seu destaque familiar de que o significado dessa tag é a exibição da imagem, tendo o uso de um atributo espeficico que é utilizado nessa tag.
-  - A sintaxe da tag img é um fechamento automatico, não necessitando da tag de fechamento.
-  - Importante destacar que se utiliza o atributo src (mais pra frente será itroduzido) que o valor passado é o diretorio da imagem, URL, dentre outros parametros que podem ser passados para a exibição da imagem.
--->
-
-<br>
-<!--Tag HTML - br: serve para inserir uma quebra de linha em textos ou em elementos HTML
--->
-
-<h1> Atributos | HTML5 </h1>
-<p>
-  Atributos são palavras chaves que podem ser inseridas em determinados elementos HTMl que definem o comportamento correspodente, dependo do atributo envolvido. <br>
-  Na tag img, é possível perceber que para se inserir uma imagem, é necessário utilizar o atributo src.
-</p>
-<!--O atributo src serve para designar uma URL ou diretorio, de forma que possa ser passado como valor a localização da imagem que vai ser exibida.
-
-  A sintaxe, basta inserir o nome do atributo acompanhado com o = e "" que é o valor que será inserido para determinar a localização da imagem.
--->
-<h2>src</h2>
-<p>Por exemplo, </p>
-<img src="">
+<!--Em breve a construção da biblioteca de desenvolvimento apenas com HTML-->
