Inserindo e modificando o contexto do atributo src.

--- a/atributos/src/src.html
+++ b/atributos/src/src.html
@@ -1,2 +1,4 @@
-<img src="">
-<img src="">
+<img src="../alt/alt.html">
+<!--Exemplo de inserção a diretórios-->
+<img src="www.nomeDaImagem.com/aaaa.jpg">
+<!--Exemplo de inserção por URL -->
