docs: inserindo estrutura padrão HTML

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!--Em breve a construção da biblioteca de desenvolvimento apenas com HTML-->
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>S-Documentação</title>
+</head>
+<body>
+  
+</body>
+</html>
